--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version = "3.0.10"}
+clap = { version = "3.0.10" }
+csv = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4"
 
 [[bin]]
 name = "eventlogger"
