--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ clap = { version = "3.0.10" }
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
+crossterm = { version = "0.19", features = [ "serde" ] }
+tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
 
 [[bin]]
 name = "eventlogger"
